Implemented export of PGM and PPM images